FILE(GLOB_RECURSE TOTEM_DESTROYER_SRCS *.cpp)
SET(TOTEM_DESTROYER_SRCS ${TOTEM_DESTROYER_SRCS} PARENT_SCOPE)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${SDL_INCLUDE_DIR}
	${SDLIMAGE_INCLUDE_DIR}
	${SDLTTF_INCLUDE_DIR}
	${PROJECT_SOURCE_DIR}/Box2D/Include
	${PROJECT_SOURCE_DIR}/guichan/include
)

ADD_EXECUTABLE(totem-destroyer ${TOTEM_DESTROYER_SRCS})
SET_TARGET_PROPERTIES(totem-destroyer PROPERTIES 
	LINK_FLAGS "${TOTEM_DESTROYER_LDFLAGS}" 
	COMPILE_FLAGS "${TOTEM_DESTROYER_CFLAGS}"
)

TARGET_LINK_LIBRARIES(totem-destroyer
	${SDL_LIBRARY}
	${SDLIMAGE_LIBRARY}
	${SDLTTF_LIBRARY}
	${OPENGL_LIBRARY}
	guichan_opengl
	guichan_sdl
	guichan
	box2d
)

INSTALL(TARGETS totem-destroyer RUNTIME DESTINATION ${BIN_DESTINATION})

IF(WIN32)
	# TODO: pridat nutne .dll knihovny
ENDIF(WIN32)

